# medme

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TESTING.md  about.html  blog.html  changelog.html  index.html
.claude/agents/: blog-writer.md
.github/: codeql-config.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml  deploy-viewer.yml  desktop-build.yml  fuzz.yml  mobile.yml  scorecard.yml
apps/cli/src/: main.rs
apps/desktop/: package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/src/: App.css  App.tsx  api.ts  docmeta.ts  labTable.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  dicom_subprocess.rs  dto.rs  export.rs  inbox.rs  lib.rs  share.rs
apps/desktop/src-tauri/tests/: dicom_subprocess_roundtrip.rs
apps/desktop/src/components/: AboutView.tsx  AuditView.tsx  DicomViewer.tsx  DocumentView.tsx  ImportView.tsx  PatientBanner.tsx  PdfViewer.tsx  ReportContent.tsx  SettingsView.tsx  Sidebar.tsx  Timeline.tsx
apps/desktop/test/: labTable.test.ts
apps/mobile/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/mobile/src/: App.css  App.tsx  api.ts  icons.tsx  labTable.ts  main.tsx  styles.css  types.ts
apps/mobile/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/icons/: icon.icns
apps/mobile/src-tauri/src/: commands.rs  dto.rs  lib.rs  vision.rs
apps/mobile/test/: labTable.test.ts
apps/mobile_flutter/: .gitignore  CLAUDE.md  pubspec.yaml
apps/mobile_flutter/android/app/: build.gradle.kts  proguard-rules.pro
apps/mobile_flutter/integration_test/: settings_test.dart
apps/mobile_flutter/ios/: Podfile
apps/mobile_flutter/ios/Runner/: AppDelegate.swift  Info.plist
apps/mobile_flutter/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile_flutter/lib/: ephemeral_session.dart  import_flow.dart  main.dart  ocr_bridge.dart  review_state.dart  theme.dart
apps/mobile_flutter/lib/screens/: archive_screen.dart  import_helpers.dart  qr_share_screen.dart  settings_screen.dart
apps/mobile_flutter/lib/screens/doctor/: consent_screen.dart  doctor_delivery_count.dart  doctor_home_screen.dart  proxy_intake_flow.dart
apps/mobile_flutter/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
apps/mobile_flutter/lib/src/rust/api/: dto.dart  dto.freezed.dart  vault.dart  vault_ephemeral.dart
apps/mobile_flutter/rust/: Cargo.toml
apps/mobile_flutter/rust/src/: frb_generated.rs
apps/mobile_flutter/rust/src/api/: dto.rs  mod.rs  vault.rs  vault_ephemeral.rs
apps/mobile_flutter/rust_builder/ios/: rust_lib_mobile_flutter.podspec
docs/: 008_Frontend_Tauri.md  009_Encounter_Model.md  012_Viewers_and_Rendering.md  013_Mobile_App.md  014_Imaging_Overhaul.md  015_Trends_and_Timelines.md  020_Flutter_Mobile_Rewrite.md  030_Clinical_Handoff.md
docs/log/: 2026-07-18-mobile-audit-extraction-strategy.md  2026-07-18-qr-share-security-and-community-prep.md
examples/demo-dataset/: generate.sh  render_report_pdf.py  render_scan.py
examples/demo-dataset/scenarios/: 2025-03-12_头颅CT_协和.dcm  2025-06-20_腰椎MRI_华山.dcm
examples/red-team/: generate.sh
examples/sample-records/: 2024-06-10_处方_心内科.txt  2025年02月18日_CT报告_肺结节.txt  未标日期_检验报告_甲状腺功能.txt
fuzz/: Cargo.toml
fuzz/corpus/parser_text/: seed.txt
fuzz/fuzz_targets/: dicom_parse.rs  parser_text.rs  summary_assemble.rs
web/hosted-viewer/: index.html
