[package]
name = "rust_lib_mobile_flutter"
version = "0.1.0"
edition = "2021"

# 这个 crate 自成一体、由 cargokit 单独构建,不属于任何上层 workspace(见根
# Cargo.toml 的 `exclude`)。显式声明一个空 `[workspace]` 表把这一点钉死——否则
# 当本目录被嵌套在另一个已存在的 workspace 内时(例如本仓库用 git worktree 做
# 并行 agent 隔离,worktree checkout 落在主仓库工作树的 `.claude/worktrees/`
# 下面,自身又是一个完整 workspace),`cargo check` 会在向上找 workspace 根时
# 越过最近的 `[workspace]` 一路找到最外层仓库根,报
# "current package believes it's in a workspace when it's not"。空
# `[workspace]` 表是 Cargo 自己给出的推荐解法,彻底切断向上搜索。
[workspace]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
anyhow = "1"
chrono = "0.4"
# 随应用二进制打包示例数据集(见 api::vault::DEMO_DATA / load_demo_data)。
include_dir = "0.7"
# 复用现有 Rust 数据核(与桌面同一保险箱格式 → 同步互通)。
core-model = { path = "../../../packages/core-model" }
pipeline = { path = "../../../packages/pipeline" }
parser = { path = "../../../packages/parser" }
medme-share = { path = "../../../packages/share" }
# DICOM:iOS + 安卓两端都关掉 `codecs`(C/C++ JPEG2000/JPEG-LS 解码器),与 Tauri
# 移动端 `apps/mobile/src-tauri/Cargo.toml` 的取舍一致——移动端不看 DICOM 像素
# 精细阅片,免去这处内存破坏型 RCE 面(GHSA-24px),`parse_meta`/`render_png` 仍
# 可用(仅不支持的压缩传输语法会降级)。故意不做任何 per-target 的重新启用。
dicom = { path = "../../../packages/dicom", default-features = false }

# **测试版,feat/android-pp-ocr 分支 —— ADR 0005 尚未 supersede。** iOS 侧已合入
# main(见 ADR 0006);本分支把安卓也接到同一 PP-OCRv5 引擎(用户反馈安卓 ML Kit
# 识别质量不够,拍板换成和 iOS 同引擎同模型)。只在 iOS/安卓 target 上链接
# (`cfg(any(target_os = "ios", target_os = "android"))`,而非 Cargo feature),
# 桌面/CLI 构建完全不受影响、不多链一个字节的 onnxruntime。`default-features =
# false` + 只留 `engine` 关掉 `auto-download`(离线,模型随 app 打包,见
# `api::vault` 里 PP-OCR 相关代码的模型落盘逻辑),不然沙盒里没有可写的
# `$OAR_HOME` 首启会直接失败。见 `packages/ocr/Cargo.toml` 对 `engine`/
# `auto-download` 两个 feature 的说明。安卓侧 `ort`(经 `oar-ocr` 的
# `download-binaries`)在 build 时为 `aarch64-linux-android` 下载预编译静态
# onnxruntime(`libonnxruntime.a`,~108MB 未剥离)并静态链接,另外动态链接
# NDK 的 `libc++_shared.so`(C++ 标准库,NDK 推荐做法——多个 .so 共享同一份
# libc++ 而非各自静态内嵌一份)。**待办,真机测前必做**:cargokit 的 Gradle
# 插件只把我们自己编译出的 `lib*.so` 拷进 APK 的 jniLibs(见
# `rust_builder/cargokit/build_tool/lib/src/artifacts_provider.dart`
# `getArtifactNames`),不会自动带上这个 NDK 系统库——首次真机跑会在
# `dlopen` 我们的 `.so` 时因为它依赖的 `libc++_shared.so` 缺失而
# `UnsatisfiedLinkError`。还没接这块(需要往 `rust_builder/android/`
# 加一个 Gradle 任务或直接把 NDK 的 `libc++_shared.so` 拷进
# jniLibs,两种做法都没试过、没验证,留给真机测那一步一起解决)。
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
ocr = { path = "../../../packages/ocr", default-features = false, features = ["engine"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
